versions/v5.0.0/docs/spec.md
# AI Prompt Helper Chrome拡張機能 仕様書

## 1. 概要

### 1.1 プロジェクト名
AI Prompt Helper

### 1.2 目的
ChatGPT、Claude、Google Gemini等のAIチャットサイトで、プロンプトテクニック集を簡単に選択・入力できるChrome拡張機能を提供する。

### 1.3 対象サイト
- ChatGPT (chat.openai.com, chatgpt.com)
- Claude (claude.ai)
- Google Gemini/Bard (gemini.google.com, bard.google.com)

## 2. システム構成

### 2.1 ファイル構成
```
AI_Prompt_Helper-Chrome_Extension/
├── manifest.json           # Chrome拡張機能の設定ファイル
├── prompts.json            # プロンプトテクニック集データ
├── README.md               # プロンプト編集方法説明
├── CLAUDE.md               # Claude Code向けプロジェクト情報
├── DEVELOPMENT_PROCESS.md  # 開発プロセス指針
├── docs/                   # ドキュメント
│   ├── spec.md             # 本仕様書
│   └── fails.md            # 失敗事例・バグ記録
├── temp/                   # 全バージョン履歴保持
├── test/                   # 最新版のみ（テスト用）
├── src/                    # リリース版
│   ├── content.js          # メインスクリプト
│   ├── styles.css          # UIスタイル
│   └── popup.html          # 拡張機能ポップアップ画面
└── icons/                  # アイコンファイル
    ├── icon16.png          # 16×16px アイコン
    ├── icon48.png          # 48×48px アイコン
    └── icon128.png         # 128×128px アイコン
```

### 2.2 技術仕様
- **Manifest Version**: 3
- **対応ブラウザ**: Chrome（Chromium系ブラウザ）
- **権限**: activeTab, storage
- **実装**: Vanilla JavaScript, CSS

## 3. 機能仕様

### 3.1 メイン機能

#### 3.1.1 プロンプトヘルパーUI
- **表示位置**: 各AIサイトの入力欄左上外側
- **表示形式**: 📝アイコンボタン + ドロップダウンメニュー
- **表示条件**: 対象サイトで入力欄が検出された時

#### 3.1.2 ドロップダウンメニュー
- **構造**: 3階層（カテゴリ → サブカテゴリ → プロンプト）
- **表示方向**: 画面上部に十分スペースがある場合は下向き、下部の場合は上向き
- **閉じる操作**: 外側クリック、プロンプト選択時

#### 3.1.3 プロンプト挿入
- **対象**: textarea、contenteditable要素
- **動作**: 選択したプロンプトテキストを入力欄に挿入
- **イベント**: input イベントを発火してサイト側JavaScriptとの連携を確保

### 3.2 動的追跡機能

#### 3.2.1 位置追跡
- **監視間隔**: 1秒
- **追跡対象**: 入力欄の位置変更
- **対応**: スクロール、リサイズ、ページ構造変更

#### 3.2.2 要素検出
- **検出方法**: 複数セレクターによる順次試行
- **対象セレクター**:
  ```javascript
  [
    'textarea[placeholder*="message"]',
    'textarea[placeholder*="メッセージ"]', 
    'textarea[data-testid="textbox"]',
    'textarea[id*="prompt"]',
    'textarea[class*="prompt"]',
    'div[contenteditable="true"]',
    'div[role="textbox"]'
  ]
  ```

### 3.3 レスポンシブ対応
- **ダークモード**: システム設定に自動対応
- **モバイル**: 画面幅768px以下での最適化
- **ポジショニング**: fixed positioning による画面固定

## 4. プロンプトテクニック集

### 4.1 データ構造（prompts.json）
```json
{
  "categories": [
    {
      "name": "カテゴリ名",
      "subcategories": [
        {
          "name": "サブカテゴリ名", 
          "prompts": [
            {
              "title": "プロンプトタイトル",
              "text": "プロンプト内容"
            }
          ]
        }
      ]
    }
  ]
}
```

### 4.2 収録テクニック

#### 4.2.1 基本プロンプト技法
- **Zero-shot（直接指示）**: 例なしでの直接タスク指示
- **Few-shot（例示学習）**: 例を示してパターン学習

#### 4.2.2 思考プロセス技法  
- **Chain of Thought（CoT）**: 段階的思考プロセス
- **Tree of Thought（ToT）**: 複数解決策の比較検討

#### 4.2.3 ロールプレイ技法
- **専門家ペルソナ**: 特定専門家としての回答
- **対話型ペルソナ**: インタビュアー・評論家機能

#### 4.2.4 構造化プロンプト
- **フレームワーク活用**: PREP法、5W1H、SWOT分析
- **ステップバイステップ**: 手順書作成、学習計画

#### 4.2.5 創作・発想技法
- **アイデア生成**: ブレインストーミング、SCAMPER法
- **ストーリーテリング**: 物語構造、ヒーローズジャーニー

#### 4.2.6 評価・改善技法
- **批判的思考**: 多角的評価、仮説検証
- **改善提案**: PDCAサイクル、Before/After比較

## 5. UIデザイン仕様

### 5.1 アイコンボタン
- **サイズ**: 32px × 32px
- **背景色**: #f0f0f0（通常）、#e0e8ff（ホバー）
- **ボーダー**: 1px solid #d0d0d0
- **アイコン**: 📝（絵文字）

### 5.2 ドロップダウンメニュー
- **幅**: 320px
- **最大高**: 400px
- **背景**: white（ライト）、#2d2d2d（ダーク）
- **影**: 0 8px 24px rgba(0, 0, 0, 0.15)

### 5.3 カテゴリヘッダー
- **メインカテゴリ**: グラデーション背景（#667eea → #764ba2）
- **サブカテゴリ**: #f0f4ff背景、左ボーダー2px #8fa3ff
- **プロンプト項目**: #ffffff背景、ホバー時#f0f4ff

### 5.4 ダークモード
- **背景色**: #2d2d2d、#3a3a3a、#4a4a4a
- **テキスト**: #e0e0e0、#d0d0d0
- **ボーダー**: #444、#555

## 6. 実装詳細

### 6.1 初期化フロー
1. サイト判定（detectAISite）
2. プロンプトデータ読み込み（loadPromptsFromJSON）
3. 入力欄検出（findTextarea）
4. UIヘルパー作成（createPromptHelper）
5. 位置監視開始

### 6.2 動的対応
- **MutationObserver**: DOM変更監視
- **setInterval**: 位置更新（1秒間隔）
- **イベントリスナー**: scroll, resize

### 6.3 エラーハンドリング
- **ファイル読み込み失敗**: デフォルトプロンプトにフォールバック
- **要素検出失敗**: 定期的な再検出
- **位置計算エラー**: 安全な位置へのフォールバック

## 7. カスタマイズ方法

### 7.1 プロンプト追加・編集
1. `prompts.json`ファイルを編集
2. JSON構文に従ってデータを追加・変更
3. Chrome拡張機能を再読み込み
4. 対象サイトのページを再読み込み

### 7.2 新サイト対応
1. `manifest.json`の`matches`に新サイトURLを追加
2. `detectAISite()`関数に判定条件を追加
3. 必要に応じて`findTextarea()`のセレクターを追加

## 8. インストール・運用

### 8.1 インストール手順
1. Chrome拡張機能管理画面（chrome://extensions/）を開く
2. 「デベロッパーモード」を有効化
3. 「パッケージ化されていない拡張機能を読み込む」でフォルダを選択

### 8.2 更新手順
1. ファイルを編集
2. 拡張機能管理画面で更新ボタンをクリック
3. 対象サイトを再読み込み

### 8.3 トラブルシューティング
- **表示されない**: ページ再読み込み、拡張機能再読み込み
- **位置がずれる**: ページ構造変更への対応待ち
- **プロンプト読み込み失敗**: JSON構文エラーの確認

## 9. 制限事項

### 9.1 技術的制限
- Chrome拡張機能Manifest V3の制約
- 各サイトのCSP（Content Security Policy）制約
- サイト側UI変更による影響

### 9.2 対応範囲
- デスクトップChrome（優先）
- モバイルChromeは基本対応のみ
- 他ブラウザは未対応

## 10. 今後の拡張予定

### 10.1 機能拡張
- カスタムプロンプト作成機能
- プロンプト使用履歴・お気に入り
- チーム共有機能

### 10.2 対応拡大  
- 新AIサービスへの対応
- 多言語プロンプト対応
- エクスポート・インポート機能

---

**バージョン**: 2.0.0 ✅  
**最終更新**: 2025年7月27日  
**作成者**: Claude Code

## Version 2.0.0 更新内容

### フォルダベースプロンプト管理 🗂️
- prompts.jsonから3階層フォルダ構造（prompts/カテゴリ/サブカテゴリ/プロンプト.txt）に変更
- 各プロンプトを個別のテキストファイルで管理
- v1.0のJSON形式との完全な後方互換性を維持

### 新しいデータ構造
```
prompts/
├── カテゴリ名/
│   └── サブカテゴリ名/
│       └── プロンプト名.txt
```

### 読み込み優先順位
1. **prompts/フォルダ構造**から読み込み（優先）
2. フォルダが存在しない場合は**user/prompts.json**を使用
3. 両方とも失敗した場合は**デフォルトプロンプト**を使用

### 動作確認済み機能 ✅
- フォルダベースプロンプト管理の正常動作
- 3階層ナビゲーション（カテゴリ→サブカテゴリ→プロンプト）
- テキストファイルでの個別プロンプト管理
- JSON形式との完全な後方互換性